# iree_n_body

./: CMakeLists.txt  README.md  n_body.c  n_body.mlir  plan.md
docs/: architecture.md  design.md
examples/: comet_chaser.tsv  figure8_3body.tsv  lagrange_trojan_balanced_light.tsv  pinwheel_exchange.tsv  stress_orbital_cluster.tsv  stress_orbital_cluster_1025.tsv  stress_orbital_cluster_257.tsv  wide_binary_intruder.tsv  yin_yang_slingshot.tsv
scripts/: build_vmfb.sh
