cmake_minimum_required(VERSION 3.28)

project(iree_n_body C CXX)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(IREE_BUILD_COMPILER OFF CACHE BOOL "" FORCE)
set(IREE_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(IREE_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
set(IREE_BUILD_PYTHON_BINDINGS OFF CACHE BOOL "" FORCE)
set(IREE_BUILD_TRACY OFF CACHE BOOL "" FORCE)
set(IREE_ENABLE_RUNTIME_TRACING ON CACHE BOOL "" FORCE)
set(IREE_ERROR_ON_MISSING_SUBMODULES OFF CACHE BOOL "" FORCE)
set(TRACY_TIMER_FALLBACK ON CACHE BOOL "" FORCE)

add_subdirectory(third_party/iree EXCLUDE_FROM_ALL)

add_executable(n_body n_body.c)
set_property(TARGET n_body PROPERTY C_STANDARD 11)
set_property(TARGET n_body PROPERTY C_STANDARD_REQUIRED ON)
target_link_libraries(n_body PRIVATE iree::runtime::unified m)
